# safefeat

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
concepts/: index.html
demo_dataset/: index.html
demo_datasets/customer_demo_questions/: index.html
docs/: api.md  concepts.md  demo_dataset.md  getting-started.md  index.html  index.md
docs/demo_datasets/: customer_demo_questions.md
docs/stylesheets/: home.css
getting-started/: index.html
overrides/: main.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/concepts/: index.html
site/getting-started/: index.html
site/search/: search_index.json
src/safefeat/: __init__.py  audit.py  core.py  spec.py
src/safefeat/datasets/: __init__.py  loader.py
src/safefeat/datasets/data/: README.md  customer_spine.csv
tests/: test_build_features.py  test_dataset_loader.py  test_point_in_time.py  test_recency.py  test_smoke.py  test_window_count.py  test_windowagg_metrics.py
